# Multidimensional-Analysis-Tagger-of-Mandarin-Chinese

./: Decriptive_stats.csv  Descriptive stats 54 feature.csv  Descriptive stats 54 features.csv  Descriptive stats.csv  Descriptive_stats_53_features.csv  Dimension scores.ipynb  Dimension_scores.py  Factor analysis and dimension scores.ipynb  Linguistic features (add NOMZ subfeature).ipynb  Linguistic features (pos).ipynb  Linguistic features (raw).ipynb  Linguistic_features_add_NOMZ_subfeature.py  Linguistic_features_pos.py  Linguistic_features_segmented.py  MD training pos.ipynb  MD training-crude pos.ipynb  MD training.ipynb  MulDiChineseDict.txt  README.md  pyproject.toml  setup.cfg  setup.py
Descriptive stats for each register/: academic.csv  academic_dimension_scores.csv  academic_feature_summary.csv  adventure.csv  adventure_dimension_scores.csv  adventure_feature_summary.csv  adventure_fiction_dimension_scores.csv  adventure_fiction_feature_summary.csv  biography.csv  biography_dimension_scores.csv  biography_feature_summary.csv  editorial.csv  editorial_dimension_scores.csv  editorial_feature_summary.csv  general_dimension_scores.csv  general_feature_summary.csv  general_fiction.csv  general_fiction_dimension_scores.csv  general_fiction_feature_summary.csv  humor.csv  humor_dimension_scores.csv  humour.csv  humour_dimension_scores.csv  humour_feature_summary.csv  mystery.csv  mystery_dimension_scores.csv  mystery_feature_summary.csv  mystery_fiction_dimension_scores.csv  mystery_fiction_feature_summary.csv  official.csv  official_dimension_scores.csv  popular.csv  (+25 more)
(+33 files in other folders)
