[metadata]
name = muldichinese-Nannan-Liu
version = 0.0.1
author = Nannan Liu
author_email = nnl93@connect.hku.hk
description = A Chinese register analyser
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/Nannan-Liu/Multidimensional-Analysis-Tagger-of-Mandarin-Chinese
project_urls =
    Bug Tracker = https://github.com/Nannan-Liu/Multidimensional-Analysis-Tagger-of-Mandarin-Chinese/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
